--- a/index.html
+++ b/index.html
@@ -138,6 +138,36 @@
               <div class="text-container">
                 <h3 class="team-member-vacation">Mark Guerrero</h3>
                 <p class="team-member-name">Product Designer</p>
+                <ul class="team-member-social list">
+                  <li class="team-member-social-item">
+                    <a href="https://instagram.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://twitter.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://facebook.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://linkedin.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -150,6 +180,36 @@
               <div class="text-container">
                 <h3 class="team-member-vacation">Tom Ford</h3>
                 <p class="team-member-name">Frontend Developer</p>
+                <ul class="team-member-social list">
+                  <li class="team-member-social-item">
+                    <a href="https://instagram.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://twitter.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://facebook.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://linkedin.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -162,6 +222,36 @@
               <div class="text-container">
                 <h3 class="team-member-vacation">Camila Garcia</h3>
                 <p class="team-member-name">Marketing</p>
+                <ul class="team-member-social list">
+                  <li class="team-member-social-item">
+                    <a href="https://instagram.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://twitter.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://facebook.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://linkedin.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -174,6 +264,36 @@
               <div class="text-container">
                 <h3 class="team-member-vacation">Daniel Wilson</h3>
                 <p class="team-member-name">UI Designer</p>
+                <ul class="team-member-social list">
+                  <li class="team-member-social-item">
+                    <a href="https://instagram.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://twitter.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://facebook.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-social-item">
+                    <a href="https://linkedin.com" class="team-member-social-link link">
+                      <svg class="social-link-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
