--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features list">
             <li class="feature">
+              <div class="icon-background">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -70,6 +75,11 @@
               </p>
             </li>
             <li class="feature">
+              <div class="icon-background">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -77,6 +87,11 @@
               </p>
             </li>
             <li class="feature">
+              <div class="icon-background">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -84,6 +99,11 @@
               </p>
             </li>
             <li class="feature">
+              <div class="icon-background">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -142,28 +162,28 @@
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -184,28 +204,28 @@
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -226,28 +246,28 @@
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -268,28 +288,28 @@
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
                       <svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -299,16 +319,88 @@
           </ul>
         </div>
       </section>
+      <section class="customers section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons.svg#client1"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons.svg#client2"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons.svg#client3"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons.svg#client4"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons.svg#client5"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons.svg#client6"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="site-footer">
-      <div class="container">
-        <a class="logo footer link" href="./index.html"
-          >Web<span class="footer-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-content">
+        <div class="logo-container">
+          <a class="logo footer link" href="./index.html"
+            >Web<span class="footer-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="social-container">
+          <p class="social-text">Social media</p>
+          <ul class="social-footer list">
+            <li class="social-footer-item">
+              <a href="https://instagram.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a href="https://twitter.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a href="https://facebook.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a href="https://linkedin.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
