--- a/portfolio.html
+++ b/portfolio.html
@@ -204,14 +204,49 @@
       </section>
     </main>
     <footer class="site-footer">
-      <div class="container">
-        <a class="logo footer link" href="./index.html"
-          >Web<span class="footer-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-content">
+        <div class="logo-container">
+          <a class="logo footer link" href="./index.html"
+            >Web<span class="footer-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="social-container">
+          <p class="social-text">Social media</p>
+          <ul class="social-footer list">
+            <li class="social-footer-item">
+              <a href="https://instagram.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a href="https://twitter.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a href="https://facebook.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-footer-item">
+              <a href="https://linkedin.com" class="social-footer-link link">
+                <svg class="social-footer-icon">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
