--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="site-header container">
+      <div class="container">
         <nav class="header-navigation">
           <a class="logo header link" href="./index.html"
             >Web<span class="header-span">Studio</span></a
@@ -64,7 +64,7 @@
           <ul class="features list">
             <li class="feature">
               <div class="icon-background">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
@@ -76,7 +76,7 @@
             </li>
             <li class="feature">
               <div class="icon-background">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -88,7 +88,7 @@
             </li>
             <li class="feature">
               <div class="icon-background">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
@@ -100,7 +100,7 @@
             </li>
             <li class="feature">
               <div class="icon-background">
-                <svg class="feature-icon">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
@@ -161,28 +161,28 @@
                 <ul class="team-member-social list">
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -203,28 +203,28 @@
                 <ul class="team-member-social list">
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -245,28 +245,28 @@
                 <ul class="team-member-social list">
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -287,28 +287,28 @@
                 <ul class="team-member-social list">
                   <li class="team-member-social-item">
                     <a href="https://instagram.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://twitter.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://facebook.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-member-social-item">
                     <a href="https://linkedin.com" class="team-member-social-link link">
-                      <svg class="social-link-icon">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -324,34 +324,46 @@
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons.svg#client1"></use>
-              </svg>
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#client1"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons.svg#client2"></use>
-              </svg>
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#client2"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons.svg#client3"></use>
-              </svg>
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#client3"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons.svg#client4"></use>
-              </svg>
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#client4"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons.svg#client5"></use>
-              </svg>
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#client5"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons.svg#client6"></use>
-              </svg>
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#client6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -373,28 +385,28 @@
           <ul class="social-footer list">
             <li class="social-footer-item">
               <a href="https://instagram.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a href="https://twitter.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a href="https://facebook.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a href="https://linkedin.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
