--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="site-header container">
+      <div class="container">
         <nav class="header-navigation">
           <a class="logo header link" href="./index.html"
             >Web<span class="header-span">Studio</span></a
@@ -219,28 +219,28 @@
           <ul class="social-footer list">
             <li class="social-footer-item">
               <a href="https://instagram.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a href="https://twitter.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a href="https://facebook.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-footer-item">
               <a href="https://linkedin.com" class="social-footer-link link">
-                <svg class="social-footer-icon">
+                <svg class="social-footer-icon" width="16" height="16">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
